--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
-@import './reset.css';
-@import 'card.css';
-@import 'grid.css'
+/*@import './reset.css';*/
+/*@import 'card.css';*/
+/*@import 'grid.css';*/
 *{
-    box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 /* Core Styles */
 
-body {
+ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background: #333;
@@ -15,167 +17,151 @@ body {
     line-height: 1.5;
     text-align: center;
   }
+.wrapper{
+  display: grid;
+  min-height: 100vh;
+	grid-template: minmax(100px, auto) 1fr minmax(70px, auto) / 1fr;
+  grid-template-areas:
+  'header'
+  'main'
+  'footer' ;
 
-  img {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
-
-  h1,
-  h2,
-  h3 {
+}
+  h1, h2, h3 {
     margin: 0;
     padding: 1em 0;
-  }
+}
+p {
+  margin: 0;
+  padding: 1em 0;
+}
+.btn {
+  display: inline-block;
+  background: #333;
+  color: #fff;
+  text-decoration: none;
+  padding: 1em 2em;
+  border: 1px solid #666;
+  margin: 0.5em 0;
+}
+.btn:hover {
+  background: #eaeaea;
+  color: #333;
+}
 
-  p {
-    margin: 0;
-    padding: 1em 0;
-  }
+.headerContainer{
+  grid-area: header;
+  display: grid;
+  grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
+  min-height: 450px;
+  position: relative;
+}
+.headerContent{
+  position: absolute;
+  background: #333 url(../images/imageBG.png);
+ background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  /*opacity: 0.4;*/
+  text-align: center;
+}
+.mainContainer{
+  grid-area: main;
+}
+.section-a{
+  background: #eaeaea;
+  color: #333;
+  padding-bottom: 2em;
+}
+@media (min-width: 700px)  { 
+.content-text>p{
+  column-count: 2;
+  column-gap: 30px;
+}
+}
 
-  .btn {
-    display: inline-block;
-    background: #333;
-    color: #fff;
-    text-decoration: none;
-    padding: 1em 2em;
-    border: 1px solid #666;
-    margin: 0.5em 0;
-  }
-
-  .btn:hover {
-    background: #eaeaea;
-    color: #333;
-  }
-
-  /* Header Showcase */
-
-  #showcase {
-    min-height: 450px;
-    color: #fff;
-    text-align: center;
-  }
-
-  #showcase .bg-image {
-    position: absolute;
-    background: #333
-      url("../images/imageBG.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: 450px;
-    z-index: -1;
-    opacity: 0.4;
-  }
-
-  #showcase h1 {
-    padding-top: 100px;
-    padding-bottom: 0;
-  }
-
-  #showcase .content-wrap,
-  #section-a .content-wrap {
-    padding: 0 1.5em;
-  }
-
-  /* Section A */
-
-  #section-a {
-    background: #eaeaea;
-    color: #333;
-    padding-bottom: 2em;
-  }
-
-  /* Section B */
-
-  #section-b {
+.mainContainerB{
     padding: 2em 1em 1em;
-  }
-
-  #section-b ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-
-  #section-b li {
+}
+@media (min-width: 700px){
+.cardContainer, .footer{
+  display: grid;
+  grid-template: 1fr/1fr repeat(3, minmax( 150px, 300px)) 1fr; 
+  justify-content: center;
+  grid-column-gap: 3%;
+}
+}
+.cardContainer{
     margin-bottom: 1em;
+    background: #333;
+    color: #333;
+}
+
+
+.card{
     background: #fff;
     color: #333;
-  }
+    max-width: 450px;
+    height: auto;
+    margin-bottom: 15px;
 
-  .card-content {
-    padding: 1.5em;
-  }
+}
+.card:first-child{
+  grid-column-start:2;
+  display: grid;
+  gap: 10px;
+  grid-auto-rows: row;
+  
+}
+.cardImage{
+  width: 100%;
+  height: 130px;
+  overflow: hidden;
+  position: relative;
+}
+img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+ /* width: 100%;
+  height: auto;
+  object-fit: cover;*/
+}
 
-  /* Section C */
-
-  #section-c {
-    background: #fff;
-    color: #333;
-    padding: 2em;
-  }
-
-  /* Section D / Boxes */
-
-  #section-d .box {
-    padding: 2em;
-    color: #fff;
-  }
-
-  #section-d .box:first-child {
+ .section-c {
+  background: #fff;
+  color: #333;
+  padding: 2em;}
+  
+  .section-d .box:first-child {
     background: #2690d4;
   }
-
-  /* Footer */
-
-  #main-footer {
+  .section-d .box {
     padding: 2em;
-    background: #000;
     color: #fff;
-    text-align: center;
   }
-
-  #main-footer a {
-    color: #2690d4;
-    text-decoration: none;
-  }
-
-  /* Media Queries */
-
-  @media (min-width: 700px) {
-    .grid {
+  @media (min-width:700px) {
+    .section-d{
       display: grid;
-      grid-template-columns: 1fr repeat(2, minmax(auto, 25em)) 1fr;
-    }
+      grid-template: 1fr/1fr 1fr;
 
-    #section-a .content-text {
-      columns: 2;
-      column-gap: 2em;
     }
-
-    #section-a .content-text p {
-      padding-top: 0;
-    }
-
-    .content-wrap,
-    #section-b ul {
-      grid-column: 2/4;
-    }
-
-    .box,
-    #main-footer div {
-      grid-column: span 2;
-    }
-
-    #section-b ul {
-      display: flex;
-      justify-content: space-around;
-    }
-
-    #section-b li {
-      width: 31%;
-    }
+   }
+.footer{
+  grid-area: footer;
+  padding: 2em;
+  background: #000;
+  color: #fff;
+  text-align: center;
+}
+@media (min-width: 700px){
+.footer {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(auto, 25em));
   }
