--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,9 @@ h1{
 .card:first-child{
   grid-column-start:2;
 }
+.card{
+  max-width: 250px;
+}
 
 }
 .cardContainer{
@@ -109,7 +112,7 @@ h1{
 .card{
     background: #fff;
     color: #333;
-    max-width: 100%;
+    width: 100%;
     height: 100%;
     margin-bottom: 15px;
 
