--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     line-height: 1.5;
     text-align: center;
   }
-  /*- по примеру не предусмотрено, что футер бедут прибит к низу. Обратите внимание на высоту враппера.*/
+  /*- Обратите внимание на высоту враппера.*/
 .wrapper{
   display: grid;
   /*min-height: 100vh;*/
